--- a/powers-master/README.Rmd
+++ b/powers-master/README.Rmd
@@ -14,11 +14,10 @@ knitr::opts_chunk$set(
 
 [![Build Status](https://travis-ci.org/vincenzocoia/powers.svg?branch=master)](https://travis-ci.org/vincenzocoia/powers)
 
-__Note__: This R package is not mean to be "serious". It's just for teaching purposes. 
 
 # powers
 
-This is an R package that gives `sqrt()` friends by providing other power functions.
+This is an R package that gives `square`, `cube`, `reciprocal`, `root_square` and `lm_plot` functions.
 
 ## Installation
 
@@ -26,7 +25,7 @@ You can install powers from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("vincenzocoia/powers")
+devtools::install_github("hw07-lh563/powers")
 ```
 
 ## Example
@@ -36,6 +35,7 @@ See the vignette for more extensive use, but here's an example:
 ```{r example}
 powers::reciprocal(2)
 powers::square(1:10)
+library(gapminder)
 lmfun(gapminder$lifeExp, gapminder$gdpPercap, mydata = gapminder)
 ```
 
